--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -9,14 +9,27 @@ html {
 
 body {
   overflow: hidden;
-  margin: 0;
+}
+* {
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
   &:hover {
     color: @primary;
   }
+}
+
+ul,
+ol {
+  list-style: none;
 }
